# Lammps-Project

./: .gitignore  README.md  __init__.py  environment.yml  log.lammps  main.py  pyproject.toml
.gemini/: GEMINI.md  settings.json
agent/: core.py  tools.py
app/: circle_39.lammps  custom_pore.lammps  custom_pore_100_1.input  data_handler.py  pore_editor.py
custom_lammps/: code_2_100_run1_export.input  last_export.json  log.lammps  trial_2_MoS2.lammps  trial_2_MoS2_120_1.input
custom_lammps/runs/20260407_141141_1ef7/: meta.json  run.sh
custom_lammps/runs/20260407_141431_81a9/: meta.json  run.sh
custom_lammps/runs/20260410_072734_eeac/: done.json  meta.json  run.sh
custom_lammps/runs/20260410_073104_96b9/: done.json  meta.json  run.sh
custom_lammps/runs/20260410_073404_5d8e/: done.json  meta.json  run.sh
custom_lammps/runs/20260410_073640_a91d/: meta.json  run.sh
custom_lammps/runs/20260410_081815_ca3f/: done.json  meta.json  run.sh
custom_lammps/runs/20260411_123418_ca60/: done.json  meta.json  run.sh
custom_lammps/runs/20260411_123456_6598/: done.json  meta.json  run.sh
custom_lammps/runs/20260411_123747_8138/: done.json  meta.json  run.sh
custom_lammps/runs/20260411_124335_3fe6/: done.json  meta.json  (+1 more)
lammps_tools/: __init__.py  input_script.py  io.py  pore_ops.py
parsers/: thermo_parser.py
run_lammps/: main.py  tools.py
runner/: __init__.py  bash_runner.py  workdir.py
script_generation/: pore_editor.py  pore_size.py
scripts/: check_env_sync.py  test_imports.sh
tests/: test_pore_editor.py
ui/: pore_editor.py  pore_editor_v2.py
(+14 files in other folders)
